[gd_scene load_steps=22 format=3 uid="uid://b415mjnfl2v0c"]

[ext_resource type="Script" path="res://scripts/objects/tree.gd" id="1_xb1sw"]
[ext_resource type="Texture2D" uid="uid://cfuiyn6drenp3" path="res://assests/landscape/objects/tree_animations/alive_whole_oak_cut.png" id="2_2bb4v"]
[ext_resource type="Texture2D" uid="uid://bqgvtemkbtmlf" path="res://assests/landscape/objects/alive_whole_oak_shade.png" id="3_rnap5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_25gp7"]
atlas = ExtResource("2_2bb4v")
region = Rect2(1400, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_htysg"]
atlas = ExtResource("2_2bb4v")
region = Rect2(0, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyjjh"]
atlas = ExtResource("2_2bb4v")
region = Rect2(100, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_4exno"]
atlas = ExtResource("2_2bb4v")
region = Rect2(200, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro15w"]
atlas = ExtResource("2_2bb4v")
region = Rect2(300, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjt73"]
atlas = ExtResource("2_2bb4v")
region = Rect2(400, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_afi4x"]
atlas = ExtResource("2_2bb4v")
region = Rect2(500, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_33exu"]
atlas = ExtResource("2_2bb4v")
region = Rect2(600, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs4g0"]
atlas = ExtResource("2_2bb4v")
region = Rect2(700, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5cpa"]
atlas = ExtResource("2_2bb4v")
region = Rect2(800, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1q7i"]
atlas = ExtResource("2_2bb4v")
region = Rect2(900, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_gudrl"]
atlas = ExtResource("2_2bb4v")
region = Rect2(1000, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7ivm"]
atlas = ExtResource("2_2bb4v")
region = Rect2(1100, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_4adsk"]
atlas = ExtResource("2_2bb4v")
region = Rect2(1200, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqkjq"]
atlas = ExtResource("2_2bb4v")
region = Rect2(1300, 0, 100, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_j730g"]
atlas = ExtResource("3_rnap5")
region = Rect2(0, 0, 100, 162)

[sub_resource type="SpriteFrames" id="SpriteFrames_plmbd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_25gp7")
}],
"loop": false,
"name": &"cutdown",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_htysg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyjjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4exno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro15w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjt73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afi4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33exu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs4g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5cpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1q7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gudrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7ivm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4adsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqkjq")
}],
"loop": false,
"name": &"cutting",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j730g")
}],
"loop": false,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_j2dxd"]
radius = 48.6621

[node name="tree" type="Node2D"]
script = ExtResource("1_xb1sw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -72)
sprite_frames = SubResource("SpriteFrames_plmbd")

[node name="cutdown_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cutdown_area"]
position = Vector2(0, -40)
shape = SubResource("CircleShape2D_j2dxd")

[node name="respawn" type="Timer" parent="."]
wait_time = 3.0

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -64)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="cutdown_area" to="." method="_on_cutdown_area_body_entered"]
[connection signal="body_exited" from="cutdown_area" to="." method="_on_cutdown_area_body_exited"]
[connection signal="timeout" from="respawn" to="." method="_on_respawn_timeout"]
